--- a/css/style.css
+++ b/css/style.css
@@ -545,6 +545,7 @@ h4 {
   border-radius: 4px;
   margin-top: 20px;
   padding-left: 16px;
+  color: #ffffff;
 }
 
 .subscribe-input::placeholder {
@@ -649,12 +650,6 @@ img {
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
 }
-.modal-comments {
-  resize: none;
-  width: 448px;
-  height: 120px;
-  padding: 12px 16px;
-}
 
 .modal-header {
   font-weight: bold;
@@ -671,6 +666,137 @@ img {
   line-height: 1.1667;
   letter-spacing: 0.01em;
   margin-bottom: 4px;
+  margin-top: 10px;
+}
+.modal-svg {
+  position: absolute;
+  top: 50%;
+  left: 15px;
+  transform: translateY(-50%);
+
+  fill: var(--dark-color);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-svg-position {
+  position: relative;
+}
+
+.modal-input {
+  width: 448px;
+  height: 40px;
+  padding-left: 42px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  border-radius: 4px;
+}
+.modal-svg-position:focus-within > .modal-svg {
+  fill: var(--hover-color);
+}
+
+.modal-input:focus,
+.modal-comments:focus {
+  border: 1px solid var(--hover-color);
+  outline: none;
+}
+
+.modal-comments {
+  font-size: 12px;
+  line-height: 1.1667;
+  letter-spacing: 0.01em;
+
+  resize: none;
+  width: 448px;
+  height: 120px;
+  padding: 12px 16px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+
+  border-radius: 4px;
+}
+
+.modal-comments::placeholder {
+  color: rgba(117, 117, 117, 0.5);
+}
+
+/* Customize the label (the container) */
+.custom-check {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  margin-top: 15px;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+}
+
+/* Hide the browser's default checkbox */
+.custom-check input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+/* Create a custom checkbox */
+.checkmark {
+  position: absolute;
+  bottom: 3.5px;
+  left: 14px;
+  height: 16px;
+  width: 16px;
+  border-radius: 2px;
+  background-color: var(--white-color);
+  border: 1px solid var(--dark-color);
+  margin-right: 8px;
+}
+.marr {
+  margin-left: 2px;
+}
+
+.modal-btn {
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 10px 55px;
+  margin-top: 15px;
+}
+/* On mouse-over, add a grey background color */
+.custom-check:hover input ~ .checkmark {
+  background-color: #ccc;
+}
+
+/* When the checkbox is checked, add a blue background */
+.custom-check input:checked ~ .checkmark {
+  background-color: #2196f3;
+  border: 1px solid var(--hover-color);
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the checkmark when checked */
+.custom-check input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the checkmark/indicator */
+.custom-check .checkmark:after {
+  border-width: 0 3px 3px 0;
+  background-image: url(../images/icons/check.svg);
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+  width: 16px;
+  height: 15px;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .btn-close {
@@ -682,6 +808,15 @@ img {
   border-radius: 50%;
   border: 1px solid rgba(0, 0, 0, 0.1);
   background: #ffffff;
+}
+
+.svg-close {
+  fill: #000;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.btn-close:hover .svg-close {
+  fill: var(--hover-color);
 }
 
 .backdrop.is-hidden {
